[gd_scene load_steps=3 format=3 uid="uid://crgecianj0xas"]

[ext_resource type="Script" path="res://menus/LoadGameMenu.gd" id="1_qab7f"]
[ext_resource type="PackedScene" uid="uid://dvu5bggunrv4n" path="res://menus/SavedGames.tscn" id="2_p5dsp"]

[node name="LoadGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qab7f")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SavedGames" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_p5dsp")]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Powr√≥t"

[node name="LoadButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Wczytaj"

[connection signal="save_chosen" from="MarginContainer/VBoxContainer/SavedGames" to="." method="_on_saved_games_save_chosen"]
[connection signal="save_selected" from="MarginContainer/VBoxContainer/SavedGames" to="." method="_on_saved_games_save_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
